--- a/RCCpp_DX11_Example.vcxproj.filters
+++ b/RCCpp_DX11_Example.vcxproj.filters
@@ -21,12 +21,6 @@
     <ClInclude Include="imgui\imgui_internal.h">
       <Filter>imgui</Filter>
     </ClInclude>
-    <ClInclude Include="imgui\examples\imgui_impl_win32.h">
-      <Filter>sources</Filter>
-    </ClInclude>
-    <ClInclude Include="imgui\examples\imgui_impl_dx11.h">
-      <Filter>sources</Filter>
-    </ClInclude>
     <ClInclude Include="StdioLogSystem.h">
       <Filter>sources</Filter>
     </ClInclude>
@@ -35,6 +29,21 @@
     </ClInclude>
     <ClInclude Include="SystemTable.h">
       <Filter>RuntimeCompiled</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\backends\imgui_impl_dx11.h">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\backends\imgui_impl_win32.h">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>imgui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -50,12 +59,6 @@
     <ClCompile Include="imgui\imgui_draw.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\examples\imgui_impl_win32.cpp">
-      <Filter>sources</Filter>
-    </ClCompile>
-    <ClCompile Include="imgui\examples\imgui_impl_dx11.cpp">
-      <Filter>sources</Filter>
-    </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
@@ -64,6 +67,15 @@
     </ClCompile>
     <ClCompile Include="RCCppMainLoop.cpp">
       <Filter>RuntimeCompiled</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\backends\imgui_impl_dx11.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\backends\imgui_impl_win32.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
